--- a/app/src/main/res/layout/item_recyc.xml
+++ b/app/src/main/res/layout/item_recyc.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="140dp"
     android:padding="20dp"
+    android:id="@+id/main_card"
     android:background="@color/fong_color"
     >
 
