--- a/app/src/main/res/navigation/my_navigation.xml
+++ b/app/src/main/res/navigation/my_navigation.xml
@@ -3,16 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_navigation"
-    app:startDestination="@id/listFragment">
-    <fragment
-        android:id="@+id/listFragment"
-        android:name="uz.salimovdeveloper.musicplayer.fragments.ListFragment"
-        android:label="fragment_list"
-        tools:layout="@layout/fragment_list" >
-        <action
-            android:id="@+id/action_listFragment_to_musicFragment"
-            app:destination="@id/musicFragment" />
-    </fragment>
+    app:startDestination="@id/musicFragment">
     <fragment
         android:id="@+id/musicFragment"
         android:name="uz.salimovdeveloper.musicplayer.fragments.MusicFragment"
