--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="fong_color">#1F1F1F</color>
+
+    <color name="text_color">#61B5B3B3</color>
+    <color name="qoshimcha_color">#676767</color>
 </resources>
