--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -13,6 +13,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:alpha="0.8"
+        android:background="@color/black"
         >
 
         <TextView
